return data schame

--- a/hc44Fs9SPqqfFW8b/index.html
+++ b/hc44Fs9SPqqfFW8b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content=""/>
     <title>Welfarm - Stopcastration</title>
 
-    <meta property="og:title" content="Welfarm - Stopcastration"/>
+    <meta property="og:title" content="Stop à la castration à vif des porcelets !"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content=""/>
-    <meta property="og:url" content=""/>
-    <meta property="og:image" content=""/>
+    <meta property="og:description" content="Exigeons l’interdiction de cette mutilation. Signez la pétition !"/>
+    <meta property="og:url" content=" https://action.welfarm.fr/couic2019"/>
+    <meta property="og:image" content="https://heroku-adfinitas-campaign.s3.amazonaws.com/WELFARM/PartageCouic-FB+(1).png"/>
 
     <link rel="icon" type="image/png" href="siteicon.png"/>
 
@@ -124,11 +124,11 @@
                                 </form>
                             </div>
                             <div class="small-12 columns medium-6 social">
-                                <a href="">
+                                <a href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/couic2019/" target="_blank">
                                     Je partage sur Facebook
                                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/fb.png" alt="">
                                 </a>
-                                <a href="">
+                                <a href="https://twitter.com/share?url=https://action.welfarm.fr/couic2019/" target="_blank">
                                     Je tweet
                                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/tw.png" alt="">
                                 </a>
@@ -238,7 +238,7 @@
                                 <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/tw-small.png" alt="Tweet">
                                 <p>@dguillaume26 où est passée la feuille de route de sortie de la castration à vif des porcelets promise en juillet 2018 par @StTRAVERT, votre prédécesseur au @Min_Agriculture ? 10 millions de porcelets sont castrés à vif en France, il est temps d’agir ! #stopcastration</p>
                             </a>
-                            <a class="box other">
+                            <a class="box other" href="mailto:didier.guillaume@agriculture.gouv.fr">
                                 <p>Vous n’avez pas Twitter ?<br /><span>Prenez votre plus belle plume et écrivez au Ministère de l’agriculture.</span></p>
                             </a>
                         </div>
@@ -329,11 +329,11 @@
                         </form>
                     </div>
                     <div class="social">
-                        <a href="">
+                        <a href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/couic2019/" target="_blank">
                             Je partage sur Facebook
                             <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/fb.png" alt="">
                         </a>
-                        <a href="">
+                        <a href="https://twitter.com/share?url=https://action.welfarm.fr/couic2019/" target="_blank">
                             Je tweet
                             <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/tw.png" alt="">
                         </a>
@@ -363,42 +363,42 @@
             <div class="box first">
                 <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/title-mosaic.png" alt="Revivez les faits marquants de notre campagne">
             </div>
-            <a class="box un">
+            <a class="box un" href="https://youtu.be/y7BzRfLGLiw" target="_blank">
                 <p>Campagne d’affichage dans le métro parisien juin 2019</p>
             </a>
-            <a class="box deux">
+            <a class="box deux" href="https://welfarm.fr/news/505/86/Castration-à-vif-des-porcelets-le-bio-na-pas-tout-bon" target="_blank">
                 <p>Enquête sur les mutilations subies par les cochons</p>
             </a>
-            <a class="box trois">
+            <a class="box trois" href="https://welfarm.fr/news/451/86/La-censure-continue-Après-Brest-la-préfecture-de-la-Sarthe-ordonne-larrêt-de-notre-campagne-daffichage-sur-les-porcelets" target="_blank">
                 <p>Opération d’affichage dans l’Ouest de la France censurée</p>
             </a>
-            <a class="box quatre">
+            <a class="box quatre" href="https://welfarm.fr/news/440/86/couic2018-la-tournée-est-terminée-mais-la-campagne-continue" target="_blank">
                 <p>Tournée couic2018 au plus près des producteurs</p>
             </a>
-            <a class="box cinq">
+            <a class="box cinq" href="https://welfarm.fr/news/480/86/WELFARM-et-les-porcelets-investissent-le-métro-parisien" target="_blank">
                 <p>Affichage pendant le salon de l’agriculture 2017</p>
             </a>
-            <a class="box six">
+            <a class="box six" href="https://welfarm.fr/news/434/86/WELFARM-remet-110-294-signatures-contre-la-castration-à-vif-des-porcelets-au-ministre-de-lAgriculture" target="_blank">
                 <p>110 000 signatures remises au bureau de Stéphane le Foll</p>
             </a>
-            <a class="box sept">
+            <a class="box sept" href="https://www.youtube.com/watch?v=C5GzagA5X44" target="_blank">
                 <p>Notre spot de sensibilisation atteint les 12000 vues</p>
             </a>
-            <a class="box huit">
+            <a class="box huit" href="https://www.youtube.com/watch?v=wWREHBCStaM" target="_blank">
                 <p>Dénonciation de la castration des cochons en Agriculture Biologique</p>
             </a>
-            <a class="box neuf">
+            <a class="box neuf" href="https://welfarm.fr/news/447/86/Financement-de-notre-campagne-daffichage-notre-objectif-est-atteint" target="_blank">
                 <p>Opération « financez une affiche » réussie !</p>
             </a>
-            <a class="box dix">
+            <a class="box dix" href="https://www.cooperl.com/fr/valoriser-le-savoir-faire" target="_blank">
                 <p>L’un des principaux producteurs de porcs renonce à la castration</p>
             </a>
             <div class="box last">
                 <p>Je partage<br />la campagne</p>
-                <a href="" target="_blank" title="Je partage sur facebook">
+                <a href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/couic2019/" target="_blank" title="Je partage sur facebook">
                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/fb.png" alt="Facebook">
                 </a>
-                <a href="" target="_blank" title="Je partage sur twitter">
+                <a href="https://twitter.com/share?url=https://action.welfarm.fr/couic2019/" target="_blank" title="Je partage sur twitter">
                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/tw.png" alt="Twitter">
                 </a>
             </div>
