return data schame

--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -366,7 +366,7 @@
             <a class="box un" href="https://youtu.be/y7BzRfLGLiw" target="_blank">
                 <p>Campagne d’affichage dans le métro parisien juin 2019</p>
             </a>
-            <a class="box deux" href="https://welfarm.fr/news/505/86/Castration-à-vif-des-porcelets-le-bio-na-pas-tout-bon" target="_blank">
+            <a class="box deux" href="https://www.youtube.com/watch?v=wWREHBCStaM" target="_blank">
                 <p>Enquête sur les mutilations subies par les cochons</p>
             </a>
             <a class="box trois" href="https://welfarm.fr/news/451/86/La-censure-continue-Après-Brest-la-préfecture-de-la-Sarthe-ordonne-larrêt-de-notre-campagne-daffichage-sur-les-porcelets" target="_blank">
@@ -384,7 +384,7 @@
             <a class="box sept" href="https://www.youtube.com/watch?v=C5GzagA5X44" target="_blank">
                 <p>Notre spot de sensibilisation atteint les 12000 vues</p>
             </a>
-            <a class="box huit" href="https://www.youtube.com/watch?v=wWREHBCStaM" target="_blank">
+            <a class="box huit" href="https://welfarm.fr/news/505/86/Castration-à-vif-des-porcelets-le-bio-na-pas-tout-bon" target="_blank">
                 <p>Dénonciation de la castration des cochons en Agriculture Biologique</p>
             </a>
             <a class="box neuf" href="https://welfarm.fr/news/447/86/Financement-de-notre-campagne-daffichage-notre-objectif-est-atteint" target="_blank">
@@ -485,7 +485,21 @@
 
 <script src="https://code.jquery.com/jquery.min.js" type="text/javascript"></script>
 <script src="./assets/js/intlTelInput.min.js" type="text/javascript"></script>
-
+<script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyDJtMzdtTo46iSXBx5VKZZIxjEIEMcHpW0",
+        authDomain: "welfarm-couic2019.firebaseapp.com",
+        databaseURL: "https://welfarm-couic2019.firebaseio.com",
+        projectId: "welfarm-couic2019",
+        storageBucket: "",
+        messagingSenderId: "183879002666",
+        appId: "1:183879002666:web:614556b81f0e28dd"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.js" type="text/javascript"></script>
 <script src="./assets/js/app.js" type="text/javascript"></script>
 <script src="./assets/js/remodal.js" type="text/javascript"></script>
