Updated 'couic2019/index.html' via CloudCannon

--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -365,7 +365,7 @@
             <div class="box first">
                 <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/title-mosaic.png" alt="Revivez les faits marquants de notre campagne">
             </div>
-            <a class="box un" href="https://youtu.be/y7BzRfLGLiw" target="_blank">
+            <a class="box un" href="https://welfarm.fr/couic-stop-castration-2019" target="_blank">
                 <p>Campagne d’affichage dans le métro parisien juin 2019</p>
             </a>
             <a class="box deux" href="https://www.youtube.com/watch?v=wWREHBCStaM" target="_blank">
