--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -3,6 +3,9 @@ layout: couic
 title: "Welfarm : Coupons court à la castration des porcelets"
 ---
 <section class="header">
+    <script type="text/javascript">
+            window.location.href = "http://action.welfarm.fr/couic2018"
+    </script>
    <div class="row header-0">
       <div class="large-12 columns">
          <a target="_blank" class="button" href="https://donner.pmaf.org?cid=22" alt="">Faire un don</a>
