Updated 'couic2019/index.html' via CloudCannon

--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -276,7 +276,7 @@
                             <a href="http://www2.assemblee-nationale.fr/scrutins/detail/(legislature)/15/(num)/688" target="_blank">M. DIARD</a> /
                             <a href="http://www2.assemblee-nationale.fr/scrutins/detail/(legislature)/15/(num)/688" target="_blank">M. RAMOS</a> /
                             <a href="http://www2.assemblee-nationale.fr/scrutins/detail/(legislature)/15/(num)/688" target="_blank">M. BOURNAZEL</a> /
-                            <a href="https://twitter.com/EstherBenbassa/status/1143147687186968576" target="_blank">MME BENBASSA</a>
+                            <a href="https://twitter.com/EstherBenbassa/status/1143147687186968576" target="_blank">MME BENBASSA</a> /
                             <a href="https://twitter.com/auroreberge/status/1144211563315945473" target="_blank">/M. GUÉREL</a> /
                             <a href="https://twitter.com/EelvAnimaux/status/1144205458422620160" target="_blank">/D. CORMAND</a> /
                             <a href="https://www.senat.fr/questions/base/2019/qSEQ190611150.html" target="_blank">/E. BENBASSA</a> /
