Updated 'couic2019/index.html' via CloudCannon

--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -280,7 +280,7 @@
                             <a href="http://www.assemblee-nationale.fr/dyn/15/amendements/0627/CION-ECO/CE1259" target="_blank">MME. GUÉREL</a> /
                             <a href="https://twitter.com/EelvAnimaux/status/1144205458422620160" target="_blank">M. CORMAND</a> /
                             <a href="https://twitter.com/VALLINIAndre/status/1144138913046585345" target="_blank">M. VALLINI</a> /
-                            <a href="https://twitter.com/auroreberge/status/1144211563315945473">MME. BERGÉ</a> /``
+                            <a href="https://twitter.com/auroreberge/status/1144211563315945473">MME. BERGÉ</a> /
                             <a href="http://questions.assemblee-nationale.fr/q15/15-22003QE.htm">M. DUPONT-AIGNAN</a> /
                         </p>
                     </section>
