--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -282,6 +282,7 @@
                             <a href="https://twitter.com/VALLINIAndre/status/1144138913046585345" target="_blank">M. VALLINI</a> /
                             <a href="https://twitter.com/auroreberge/status/1144211563315945473">MME. BERGÉ</a> /
                             <a href="http://questions.assemblee-nationale.fr/q15/15-22003QE.htm">M. DUPONT-AIGNAN</a> /
+                            <a href="http://questions.assemblee-nationale.fr/q15/15-21444QE.htm">MME. VIGNON</a> /
                         </p>
                     </section>
 
